After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724052 - Popup windows don't work in multiprocess mode
Popup windows don't work in multiprocess mode
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
git master
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-10 17:00 UTC by Carlos Garcia Campos
Modified: 2014-02-12 09:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Update to WebKit API changes (1014 bytes, patch)
2014-02-10 17:01 UTC, Carlos Garcia Campos
committed Details | Review
Fix popup windows in multiprocess mode (10.57 KB, patch)
2014-02-10 17:02 UTC, Carlos Garcia Campos
committed Details | Review

Description Carlos Garcia Campos 2014-02-10 17:00:08 UTC
We need to use new WebKit API webkit_web_view_new_with_related_view() to create the web view for the popup window in the same web process.
Comment 1 Carlos Garcia Campos 2014-02-10 17:01:41 UTC
Created attachment 268696 [details] [review]
Update to WebKit API changes

Note that this API is only in the webkit stable branch for now, not yet released.
Comment 2 Carlos Garcia Campos 2014-02-10 17:02:22 UTC
Created attachment 268697 [details] [review]
Fix popup windows in multiprocess mode
Comment 3 Yosef Or Boczko 2014-02-10 17:49:47 UTC
(In reply to comment #1)
> Created an attachment (id=268696) [details] [review]
> Update to WebKit API changes
> 
> Note that this API is only in the webkit stable branch for now, not yet
> released.

You mean in trunk/unstable branch?
Comment 4 Carlos Garcia Campos 2014-02-10 17:55:44 UTC
I mean in the stable branch, but it's also in trunk.
Comment 5 Claudio Saavedra 2014-02-11 12:46:11 UTC
Review of attachment 268696 [details] [review]:

Looks good.
Comment 6 Claudio Saavedra 2014-02-11 12:46:12 UTC
Review of attachment 268696 [details] [review]:

Looks good.
Comment 7 Claudio Saavedra 2014-02-11 12:48:22 UTC
Review of attachment 268697 [details] [review]:

Looks good.