tests/ephy-shell-test.c
@@ -54,6 +54,7 @@ test_ephy_shell_basic_embeds (void)
   /* Both embed and window should be created. */
   embed1 = ephy_shell_new_tab_full
                   (ephy_shell,
+                   NULL, /* related view */
                    NULL, /* window */
                    NULL, /* embed */
                    NULL, /* network-request */
@@ -71,6 +72,7 @@ test_ephy_shell_basic_embeds (void)
   /* Only the embed should be created */
   embed2 = ephy_shell_new_tab_full
                   (ephy_shell,
+                   NULL, /* related view */
                    EPHY_WINDOW (window), /* window */
                    NULL, /* embed */
                    NULL, /* network-request */
